--- a/public/css/index.css
+++ b/public/css/index.css
@@ -636,6 +636,10 @@ a:hover, button:hover {
         width: 194px !important;
     }
 
+    .desktop-signlog {
+        display: none !important;
+    }
+
     .navbar-menu {
         width: 40vw;
     }
