--- a/public/css/index.css
+++ b/public/css/index.css
@@ -466,7 +466,7 @@ a:hover, button:hover {
     height: 380px;
     width: 100%;
     z-index: -2;
-    background-image: url('/images/banners/island.jpg');
+    background-image: url('/images/banners/map.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
